# madwiim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  app_spp_msg_set.c  bluetooth.cpp  bluetooth.h  console_uart.c  display.cpp  display.h  encoder.cpp  encoder.h  font_lato.c  hid_device.cpp  hid_device.h  idf_component.yml  init.cpp  init.h  init.html  madbit.c  madbit.cpp  madbit.h  madbit_crc.c  madbit_protocol.h  main.c  main.cpp  settings_storage.cpp  settings_storage.h  test_32.c
main/pcap/: connect_volp_volm_source.pcapng  madbit_connect_volume_nosource.pcapng  multi_switch_source.pcapng
