idf_component_register(SRCS "settings_storage.cpp" "main.cpp" "madbit.cpp" "font_lato.c" "display.cpp" "madbit_crc.c" "encoder.cpp" "init.cpp"
                    SRCS "app_spp_msg_prs.c"
                    SRCS "app_spp_msg_set.c"
                    SRCS "console_uart.c"
                    INCLUDE_DIRS ".")
